Add relation individual endpoints
